--- a/Guider.Domain/Guider.Domain.csproj
+++ b/Guider.Domain/Guider.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\Specifications\" />
+    <Folder Include="Core\Repositories\" />
+  </ItemGroup>
+
 </Project>
