--- a/Guider.WebApi/appsettings.json
+++ b/Guider.WebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host:localhost;Port:5432;Database:TravelGuiderDB;Username:postgres;Password:1234"
+    "TravelGuiderDb": "Host=localhost;Port=5432;Database=TravelGuiderDb;Username=postgres;Password=1234"
   },
   "AllowedHosts": "*"
 }
