--- a/Guider.Application/Guider.Application.csproj
+++ b/Guider.Application/Guider.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Guider.Domain\Guider.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
