--- a/Guider.WebApi/Guider.WebApi.csproj
+++ b/Guider.WebApi/Guider.WebApi.csproj
@@ -16,10 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\Guider.Application\Guider.Application.csproj" />
     <ProjectReference Include="..\Guider.Infrastructure\Guider.Infrastructure.csproj" />
   </ItemGroup>
 
